# SAVE-YOUR-TOKENS

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cli.py  pyproject.toml  server.py
.github/workflows/: ci.yml
analyzer/: __init__.py  constants.py  models.py  scanner.py  serialization.py  utils.py
analyzer/caching/: __init__.py  cache_io.py  change_detection.py  hashing.py  models.py  reanalysis.py
analyzer/detectors/: __init__.py  build_detector.py  cicd_detector.py  container_detector.py  environment_detector.py  framework_detector.py  language_detector.py  manifests.py  package_manager_detector.py  repository_classifier.py  signatures.py
analyzer/intelligence/: __init__.py  authentication.py  common.py  configuration.py  database.py  entrypoints.py  importance.py  imports.py  modules.py  relationships.py  routes.py
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  DECISIONS.md  MCP_SERVER.md  ROADMAP.md
generator/: __init__.py  markdown.py  models.py  navigation.py  output.py  writer.py
generator/renderers/: __init__.py  ai_context.py  architecture.py  authentication.py  configuration.py  database.py  dependencies.py  important_files.py  index.py  modules.py  overview.py  project_structure.py  routes.py
incremental/: __init__.py  dependencies.py  models.py  serialization.py
mcp_server/: __init__.py  errors.py  handlers.py  models.py  server.py  tools.py  utils.py
sample_repo/: README.md  app.py  config.py  models.py
tests/: test_caching.py  test_cli.py  test_detectors.py  test_generator.py  test_incremental.py  test_intelligence.py  test_mcp_server.py  test_rebrand.py  test_scanner.py
