[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint"
version = "1.0.0"
description = "Blueprint — deterministic repository analysis and an AI-native Knowledge Base, over the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["mcp", "static-analysis", "ai", "developer-tools", "context", "knowledge-base"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

# The analysis engine and generator remain standard-library only. The MCP
# integration layer (mcp_server/) is the project's first runtime dependency
# — the official MCP SDK, required to speak the protocol correctly rather
# than implementing it by hand. See docs/DECISIONS.md (D-039).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8", "mcp>=1.0.0"]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/chiragchauhan07/SAVE-YOUR-TOKENS"
Repository = "https://github.com/chiragchauhan07/SAVE-YOUR-TOKENS"
Changelog = "https://github.com/chiragchauhan07/SAVE-YOUR-TOKENS/blob/main/CHANGELOG.md"

[project.scripts]
blueprint = "cli:main"
blueprint-mcp = "server:main"
# Deprecated aliases, kept for a transition period after the "Save your
# Tokens" -> Blueprint rename (see docs/DECISIONS.md). Both point at the
# exact same entry functions; cli.py/server.py detect invocation under the
# legacy name (via sys.argv[0]) and print a one-time deprecation notice to
# stderr rather than silently going unnoticed.
save-your-tokens = "cli:main"
save-your-tokens-mcp = "server:main"

[tool.setuptools]
py-modules = ["cli", "server"]

[tool.setuptools.packages.find]
# Auto-discover analyzer/, generator/, mcp_server/ and incremental/ and every
# subpackage under each, rather than an explicit list — an explicit list
# silently drops new subpackages from real (non-editable) builds. See
# docs/DECISIONS.md (D-025, D-033).
include = ["analyzer*", "generator*", "mcp_server*", "incremental*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
# sample_repo/ is fixture data, not source. It is meant to look like someone
# else's project, so it is not held to this project's standards.
extend-exclude = ["sample_repo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "PTH"]
